feat: optimize collection handling in game classes for improved performance and clarity