@@ -20,6 +20,7 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static me.roinujnosde.titansbattle.BaseGameConfiguration.Prize.FIRST;
 import static me.roinujnosde.titansbattle.BaseGameConfiguration.Prize.KILLER;
@@ -94,7 +95,7 @@ public class FreeForAllGame extends Game {
             givePrizes(KILLER, null, Collections.singletonList(killer));
         }
         today.setWinners(gameName, Helper.warriorListToUuidList(winners));
-        String winnerName = getConfig().isGroupMode() ? winnerGroup.getName() : winners.get(0).getName();
+        String winnerName = getConfig().isGroupMode() ? winnerGroup.getName() : winners.getFirst().getName();
         broadcastKey("who_won", winnerName);
         discordAnnounce("discord_who_won", winnerName);
         winners.forEach(w -> w.increaseVictories(gameName));
@@ -110,7 +111,7 @@ public class FreeForAllGame extends Game {
         if (getConfig().isGroupMode()) {
             winnerGroup = getGroup(warrior);
             //noinspection ConstantConditions
-            winners = getParticipants().stream().filter(p -> winnerGroup.isMember(p.getUniqueId())).toList();
+            winners = getParticipants().stream().filter(p -> winnerGroup.isMember(p.getUniqueId())).collect(Collectors.toCollection(ArrayList::new));
         } else {
             winners.add(warrior);
         }
